Marks module is been added but the module is not complete.

--- a/sms025/WebContent/WEB-INF/web.xml
+++ b/sms025/WebContent/WEB-INF/web.xml
@@ -79,4 +79,14 @@
     <servlet-name>AddTestController</servlet-name>
     <url-pattern>/AddTestController</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AddMarksController</display-name>
+    <servlet-name>AddMarksController</servlet-name>
+    <servlet-class>com.sms.controller.AddMarksController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AddMarksController</servlet-name>
+    <url-pattern>/AddMarksController</url-pattern>
+  </servlet-mapping>
 </web-app>
